# CB6502-emu

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml  cmake-multi-platform.yml  cmake-single-platform.yml
core/: CMakeLists.txt
core/inc/: acia.h  acia_unix_sock.h  bus.h  bus_api.h  clock.h  cpu.h  debugger.h  disassemble.h  emu_types.h  emulator.h  log.h  mem.h  os_signal.h  sys.h  syslog_log.h  util.h  via.h
core/logging/: CMakeLists.txt
core/logging/inc/: console_log.h  log.h
core/logging/src/: log.c
core/os/: CMakeLists.txt
core/os/windows/src/: os_signal_windows.c
core/src/: acia.c  acia_console.c  acia_unix_sock.c  bus.c  clock.c  console_log.c  cpu.c  debugger.c  disassemble.c  emulator.c  sys.c  syslog_log.c  via.c
core/src/priv/: bus_priv.h  bus_priv_types.h  clock_priv.h  clock_priv_types.h  cpu_opcodes.h  cpu_priv.h  cpu_priv_types.h  emu_priv_types.h
core/util/: CMakeLists.txt
core/util/inc/: util.h
core/util/src/: util.c
dbginfo/: CMakeLists.txt  README.md
frontend/: CMakeLists.txt
frontend/dbgcli/: CMakeLists.txt
frontend/dbgcli/inc/: dbgcli.h
frontend/dbgcli/src/: dbgcli.c
frontend/ncurses/: CMakeLists.txt
frontend/ncurses/inc/: bpwin.h  codewin.h  curs_common.h  cursmgr.h  debugwin.h  logwin.h  memwin.h  regwin.h  tracewin.h
frontend/ncurses/src/: bpwin.c  codewin.c  cursmgr.c  debugwin.c  disassemblywin.c  logwin.c  memwin.c  regwin.c  tracewin.c
io/: CMakeLists.txt
io/acia/: CMakeLists.txt
io/acia/inc/: acia.h  acia_console.h
io/acia/src/: acia.c  acia_unix_sock.c
io/at28c256/: CMakeLists.txt
io/at28c256/inc/: at28c256.h
io/at28c256/src/: at28c256.c
io/inc/: ioutil.h
io/memory/: CMakeLists.txt
io/memory/inc/: memory.h
io/memory/src/: memory.c
io/sdcard/: CMakeLists.txt
io/sdcard/inc/: sdcard.h
io/sdcard/src/: sdcard.c
io/via/: CMakeLists.txt
io/via/inc/: via.h
io/via/src/: via.c
plat/cb6502/: CMakeLists.txt  bitbang_spi.c  bitbang_spi.h  cb6502.c  cb6502.h  cbconsole.c  cbdbg.c
port/: CMakeLists.txt
port/logging/: CMakeLists.txt
port/logging/syslog/: CMakeLists.txt
port/logging/syslog/src/: syslog_log.c
port/os/: CMakeLists.txt
port/os/linux/: CMakeLists.txt
port/os/linux/src/: os_signal.c
port/os/windows/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  bus_tester.c  clock_tester.c  cpu_bin_tester.c  cpu_bin_tests.c  cpu_bin_tests.h  cpu_bin_tests.yml  cpu_unit_tester.c  gencputests.py
tests/core/cpu_asm_tests/src/: Makefile  adc_abs.s  adc_absx.s  adc_absx_page.s  adc_absy.s  adc_absy_page.s  adc_apx_ind.s  adc_imm.s  adc_zp.s  adc_zp_ind.s  adc_zpx.s  adc_zpy_ind.s  adc_zpy_ind_page.s  and_abs.s  and_absx.s  and_absx_page.s  and_absy.s  and_absy_page.s  and_imm.s  and_zp.s  and_zp_ind.s  and_zpx.s  and_zpx_ind.s  and_zpy_ind.s  and_zpy_ind_page.s  asl_a.s  asl_abs.s  asl_absx.s  asl_absx_page.s  asl_zp.s  asl_zpx.s  bbr_br.s  bbr_br_page.s  bbr_nobr.s  bbs_br.s  bbs_br_page.s  bbs_nobr.s  bcc_br.s  bcc_br_page.s  bcc_nobr.s  (+206 more)
tests/cpu/: CMakeLists.txt  cpu_tester.c
tests/io/: CMakeLists.txt  acia_tester.c  at28c256_tester.c  memory_tester.c  via_tester.c
tests/util/: CMakeLists.txt  list_tester.c
